# fdf

./: CMakeLists.txt  Makefile  author  main.c
includes/: fdf.h
srcs/: camera.c  draw.c  gradient.c  main.c  mini_atoi_base.c  over.c  proektion.c  read_file.c
